# meeple

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/fantasy_realms/: bonus.py  card.py  deck.py  glossary.py  hand.py  penalty.py
tests/: test_card.py  test_hand.py
