[project]
name = "meeple"
version = "0.1.0"
description = "Boardgame companion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]